--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
 <body>
 
     <header>
-        header
+        <p>header</p>
     </header>
 
     <section id="nav">
-        nav 
+        <p>nav</p>
     </section>
 
 
-    <aside>
-        aside
-    </aside>
-
     <section id="section">
-        section   
+        <p>section</p>  
         <article>
-            article
+            <p>article</p>
             <section id="h1">
-                 h1,h2,h3
+                 <h1>h1,h2,h3</h1>
             </section>        
             <section id="p">
-                  p
+                 <p>p</p>
             </section>
         </article>  
-        
     </section>     
+
+    <aside>
+       <p>aside</p> 
+    </aside>
     
     <section id="blank">
         -
