--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </section>     
 
     <aside>
-       <p>aside</p> 
+       <heading>aside</heading> 
     </aside>
     
-    <section id="blank">
+    <section id="clear">
         -
     </section>  
 
